- Added Functions class with memoized method in it - Added memoized function in kotlin RecursiveSamples.kt - updated kafka dependency